tests/fixtures/errors/generic_missing_type_arg.z
# E0400: a declared generic param that cannot be inferred (no field, no default).
pair: record {
    a: t
} as { t: Any.generic u: Any.generic }
main: function is {
    p: pair a: 5
}
